package com.structural.CompositePattern.Exercise3;

public interface Employee {
    void showEmployeeDetails();
}
